Plugin Repos (#160)
* Plugins refactored
* Don't expect compatiblity